# AutoVideo

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: audio_probe.py  pipeline.py  pipeline_steps.py
src/media/: __init__.py  pexels_unsplash.py  service.py
src/microstory/: service.py
src/tts/: __init__.py  edge_tts_synth.py  elevenlabs_synth.py  google_chirp3_synth.py  service.py
src/utils/: config_loader.py  helper.py  scene_paths.py  schemas.py
src/video/: __init__.py  audio_duration.py  ffmpeg.py  render_moviepy.py
src/youtube/: auth.py  upload.py
