[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "autovideo"
version = "0.1.0"
description = "Murphy Shorts / AutoVideo pipeline and API"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
